Correct styles on smallest devices

--- a/styles.css
+++ b/styles.css
@@ -200,5 +200,6 @@ span,
 @media (max-width: 300px) {
   .profile {
     height: 1000px;
+    text-align: center;
   }
 }
